# ROS2learn

./: README.md
rosprac809_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rosprac809_ws/install/automated_vehicle/lib/automated_vehicle/: camera_driver  vehicle_driver
rosprac809_ws/install/automated_vehicle/share/automated_vehicle/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rosprac809_ws/install/av_msgs/share/av_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rosprac809_ws/install/my_first_package/lib/my_first_package/: hello  light_switcher_pub  light_switcher_sub
rosprac809_ws/install/my_first_package/share/my_first_package/: package.sh
rosprac809_ws/log/: latest_build
rosprac809_ws/src/automated_vehicle/: CMakeLists.txt  package.xml
rosprac809_ws/src/automated_vehicle/config/: camera_params.yaml
rosprac809_ws/src/automated_vehicle/include/automated_vehicle/: camera.h  vehicle.h
rosprac809_ws/src/automated_vehicle/launch/: automated_vehicle.launch.py
rosprac809_ws/src/automated_vehicle/src/: camera.cpp  vehicle.cpp
rosprac809_ws/src/av_msgs/: CMakeLists.txt  package.xml
rosprac809_ws/src/my_first_package/: CMakeLists.txt
rosprac809_ws/src/my_first_package/include/my_first_package/: light_switcher_pub.h  light_switcher_sub.h
rosprac809_ws/src/my_first_package/launch/: my_first_package.launch.py  publisher.launch.py  subscriber.launch.py
rosprac809_ws/src/my_first_package/src/: light_switcher_pub.cpp  light_switcher_sub.cpp  main.cpp  my_first_package.cpp
(+25 files in other folders)
